--- a/Angular-UiWork/rawmaterialordermgt/src/app/app.component.html
+++ b/Angular-UiWork/rawmaterialordermgt/src/app/app.component.html
@@ -1,6 +1,6 @@
-
-<add-order></add-order>
-
-<update-order></update-order>
-
-<display-orders></display-orders>
+<body style = "background-color:burlywood;">
+    <h3>Raw Material Order Management</h3>
+    <a href="" routerLink="../order-mgt">Click here for Order Management</a>
+    
+    <router-outlet></router-outlet>
+    </body>  
