--- a/Angular-UiWork/rawmaterialordermgt/src/app/display-orders/display-orders.component.html
+++ b/Angular-UiWork/rawmaterialordermgt/src/app/display-orders/display-orders.component.html
@@ -1,15 +1,24 @@
-<h1>Display all Orders</h1>
+<div class="container" style="margin-top: 70px; margin-left: 300px;">
+<h1>Display all orders : </h1>
 <table border="1">
     <tr>
-      <th> Order Id </th>
+      <th>Order Id </th>
       <th> Name </th>
-      <th> Total Price </th> 
+      <th> Quantity Value</th>
+      <th>Supplier Id</th>
+      <th>Warehouse Id</th>
+      <th> Total Price </th>
+      <th> Order Date</th> 
     </tr>
 
       <tr *ngFor= "let order of orders">
         <td>{{order.orderId}}</td>
         <td>{{order.name}}</td>
+        <td>{{order.quantityValue}}</td>
+        <td>{{order.supplierId}}</td>
+        <td>{{order.warehouseId}}</td>
         <td>{{order.totalPrice}}</td>
+        <td>{{order.dateOfOrder}}</td>
       </tr>
  </table>
 
