--- a/Angular-UiWork/rawmaterialordermgt/src/app/update-order/update-order.component.html
+++ b/Angular-UiWork/rawmaterialordermgt/src/app/update-order/update-order.component.html
@@ -1,16 +1,30 @@
-<form #data="ngForm" (ngSubmit)= "updateOrder(data)">
-    <div>
+<div class="container" style="margin-top: 100px; margin-left: 200px;"></div>
+<h3>Update Delivery Status: </h3>
+<form #updateForm="ngForm" (ngSubmit)= " updateForm.valid && updateOrder(updateForm)">
+    <div class="form-group">
         <label>Enter Order Id :</label>
-        <input type = "text" name ="orderId">
+        <input type = "text" class="form-control" name ="orderId" ngModel #IdCtrl=ngModel required minlength="10">
+        <div *ngIf="IdCtrl.errors!=null && IdCtrl.errors.required">
+            Order Id is required.
+         </div>
+        <div *ngIf ="IdCtrl.errors!=null && IdCtrl.errors.minlength">
+            Minimum length should be 10.
+        </div>
     </div>
-
-    <div>
+<br>
+    <div class="form-group">
         <label>Enter Delivery Status :</label>
-        <input type = "text" name = "supplierId">
+        <input type = "text" class="form-control" name = "deliveryStatus" ngModel #statusCtrl=ngModel required >
+        <div *ngIf="statusCtrl.errors!=null && statusCtrl.errors.required">
+           Delivery Sttatus is required.
+            </div>
+   
     </div>
 
     <input type = "submit" value = "Update Order">
 </form>
 
-<div *ngIf="rawMaterialOrder !=null">
-<h3>Deliverey Status updated Successfully</h3>  
+<div *ngIf="rawMaterialOrder!==null">
+<h3>Delivery Status updated Successfully for the id : {{rawMaterialOrder.orderId}}</h3>
+
+
