--- a/Angular-UiWork/rawmaterialordermgt/src/app/app.component.html
+++ b/Angular-UiWork/rawmaterialordermgt/src/app/app.component.html
@@ -1,4 +1,4 @@
-<body style = "background-color:burlywood;">
+<body>
     <h3>Raw Material Order Management</h3>
     <a href="" routerLink="../order-mgt">Click here for Order Management</a>
     
