--- a/Angular-UiWork/rawmaterialordermgt/src/app/order-mgt/order-mgt.component.html
+++ b/Angular-UiWork/rawmaterialordermgt/src/app/order-mgt/order-mgt.component.html
@@ -1,7 +1,6 @@
 
-<h2 style="text-align:center">Order Management Home!!!</h2>
+<h2>Order Management Home!!!</h2>
 <br>
-    <br>
     <li> Place Order: <br>
     <a href="" routerLink="../add-order">click here</a>
 </li>
